2012-01-16 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/C/nact-conditions.xml: Embeds literal values between
	<literal>..</literal> tags.

	* src/nact/nact-icommand-tab.c (parse_parameters): Uses internal data.

	* src/core/na-desktop-environment.c
	* src/core/na-desktop-environment.h
	(na_desktop_environment_detect_running_desktop): Fix LXDE detection.
	(na_desktop_environment_get_label): New function.

	* src/nact/nact-preferences-editor.c
	(desktop_setup): Display the desktop label instead of its id.

	* tools/check-po.sh: Do not match binary files.

	* src/io-desktop/nadp-writer.c (nadp_writer_iexporter_export_to_buffer):
	* src/io-xml/naxml-writer.c (naxml_writer_export_to_buffer):
	Fix find_export_format_fn_from_quark() calls.

	* src/api/na-iimporter.h: Fix comment.

	* po/POTFILES.in: Reference two new files.

	* docs/reference/nautilus-actions-sections.txt:
	Report here the new GType macro names.

	* docs/nact/C/nact-conditions.xml:
	Embeds literal values between <literal>..</literal> tags.

2012-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-capability-dialog.h:
	NACT_ADD_CAPABILITY_DIALOG_TYPE GType macro renamed as
	NACT_TYPE_ADD_CAPABILITY_DIALOG.

	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-add-scheme-dialog.h:
	NACT_ADD_SCHEME_DIALOG_TYPE GType macro renamed as
	NACT_TYPE_ADD_SCHEME_DIALOG.

	* src/nact/nact-application.c:
	* src/nact/nact-application.h:
	NACT_APPLICATION_TYPE GType macro renamed as NACT_TYPE_APPLICATION.

	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-export.h:
	NACT_ASSISTANT_EXPORT_TYPE GType macro renamed as
	NACT_TYPE_ASSISTANT_EXPORT.

	* src/nact/nact-assistant-import.c:
	* src/nact/nact-assistant-import.h:
	NACT_ASSISTANT_IMPORT_TYPE GType macro renamed as
	NACT_TYPE_ASSISTANT_IMPORT.

	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h:
	NACT_CLIPBOARD_TYPE GType macro renamed as NACT_TYPE_CLIPBOARD.
