@@ -3,6 +3,9 @@
 	* docs/nact/C/nact-conditions.xml: Embeds literal values between
 	<literal>..</literal> tags.
 
+	* src/core/na-factory-object.c (na_factory_object_copy):
+	Removes target copyable data before copying source copyable data.
+
 	* src/nact/nact-icommand-tab.c (parse_parameters): Uses internal data.
 
 	* src/core/na-desktop-environment.c
